--- a/index.html
+++ b/index.html
@@ -93,21 +93,19 @@
 		</div>
 		<!-- End Hero -->
 
-		<section class="relative py-20 bg-black text-white">
+		<!-- About Section-->
+		<section id="about" class="relative py-20 bg-black text-white">
 			<div class="container mx-auto px-4">
 				<div class="items-center flex flex-wrap">
 					<div class="w-full md:w-4/12 ml-auto mr-auto px-4">
 						<img alt="..." class="max-w-full rounded-lg shadow-lg"
-							src="https://images.unsplash.com/photo-1555212697-194d092e3b8f?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=634&amp;q=80" />
+							src="https://images.unsplash.com/photo-1550345332-09e3ac987658?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"/>
 					</div>
 					<div class="w-full md:w-5/12 ml-auto mr-auto px-4">
 						<div class="md:pr-12">
-							<div
-								class="text-pink-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-pink-300">
-								<i class="fas fa-rocket text-xl"></i>
-							</div>
-							<h3 class="text-3xl font-semibold">A growing company</h3>
-							<p class="mt-4 text-lg leading-relaxed text-gray-600">
+							<small class="text-orange-500">About our gym</small>
+							<h3 class="text-4xl uppercase font-bold">Safe Body Building</h3>
+							<p class="mt-4 text-lg leading-relaxed">
 								The extension comes with three pre-built pages to help you get
 								started faster. You can change the text and images and you're
 								good to go.
@@ -117,12 +115,12 @@
 									<div class="flex items-center">
 										<div>
 											<span
-												class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-pink-600 bg-pink-200 mr-3"><i
-													class="fas fa-fingerprint"></i></span>
+												class="font-semibold inline-block py-3 mr-3 text-orange-500"><i
+													class="fas fa-dumbbell fa-2x"></i></span>
 										</div>
 										<div>
-											<h4 class="text-gray-600">
-												Carefully crafted components
+											<h4 class="text-xl">
+												State of the art gym equipment
 											</h4>
 										</div>
 									</div>
@@ -131,11 +129,13 @@
 									<div class="flex items-center">
 										<div>
 											<span
-												class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-pink-600 bg-pink-200 mr-3"><i
-													class="fab fa-html5"></i></span>
+												class="font-semibold inline-block py-3 mr-3 text-orange-500"><i
+													class="fas fa-hamburger fa-2x"></i></span>
 										</div>
 										<div>
-											<h4 class="text-gray-600">Amazing page examples</h4>
+											<h4 class="text-xl">
+												Optimum Nutrition Planning
+											</h4>
 										</div>
 									</div>
 								</li>
@@ -143,11 +143,13 @@
 									<div class="flex items-center">
 										<div>
 											<span
-												class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-pink-600 bg-pink-200 mr-3"><i
-													class="far fa-paper-plane"></i></span>
+												class="font-semibold inline-block py-3 mr-3 text-orange-500"><i
+													class="fas fa-users fa-2x"></i></span>
 										</div>
 										<div>
-											<h4 class="text-gray-600">Dynamic components</h4>
+											<h4 class="text-xl">
+												3 Professional Trainers
+											</h4>
 										</div>
 									</div>
 								</li>
@@ -157,6 +159,7 @@
 				</div>
 			</div>
 		</section>
+		<!-- End About Section-->
 		<section class="pt-20 pb-48">
 			<div class="container mx-auto px-4">
 				<div class="flex flex-wrap justify-center text-center mb-24">
