--- a/index.html
+++ b/index.html
@@ -160,122 +160,65 @@
 			</div>
 		</section>
 		<!-- End About Section-->
+
+		<!-- Trainers Section -->
 		<section class="pt-20 pb-48">
 			<div class="container mx-auto px-4">
 				<div class="flex flex-wrap justify-center text-center mb-24">
 					<div class="w-full lg:w-6/12 px-4">
-						<h2 class="text-4xl font-semibold">Here are our heroes</h2>
-						<p class="text-lg leading-relaxed m-4 text-gray-600">
-							According to the National Oceanic and Atmospheric
-							Administration, Ted, Scambos, NSIDClead scentist, puts the
-							potentially record maximum.
+						<h2 class="text-4xl font-semibold uppercase">Meet Our Trainers</h2>
+						<p class="text-lg leading-relaxed m-4">
+							Our trainers are are here to dedicate the time and effort that
+                			you need to get in the best shape of your life
 						</p>
 					</div>
 				</div>
+				<!-- Trainer Card Wrapper -->
 				<div class="flex flex-wrap">
-					<div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4">
+					<!-- Card 1 -->
+					<div class="w-full md:w-4/12 lg:mb-0 mb-12 px-4">
 						<div class="px-6">
-							<img alt="..." src="./assets/img/team-1-800x800.jpg"
-								class="shadow-lg rounded-full max-w-full mx-auto" style="max-width: 120px;" />
+							<img alt="..." src="https://images.unsplash.com/photo-1597347343908-2937e7dcc560?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
+								class="shadow-lg rounded max-w-full mx-auto" style="max-width: 250px;" />
 							<div class="pt-6 text-center">
-								<h5 class="text-xl font-bold">Ryan Tompson</h5>
+								<h5 class="text-xl font-bold">Mr Rogers</h5>
 								<p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
-									Web Developer
+									Gym Boss
 								</p>
-								<div class="mt-6">
-									<button
-										class="bg-blue-400 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-										type="button">
-										<i class="fab fa-twitter"></i></button><button
-										class="bg-blue-600 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-										type="button">
-										<i class="fab fa-facebook-f"></i></button><button
-										class="bg-pink-500 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-										type="button">
-										<i class="fab fa-dribbble"></i>
-									</button>
-								</div>
 							</div>
 						</div>
 					</div>
-					<div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4">
+					<!-- Card 2 -->
+					<div class="w-full md:w-4/12 lg:mb-0 mb-12 px-">
 						<div class="px-6">
-							<img alt="..." src="./assets/img/team-2-800x800.jpg"
-								class="shadow-lg rounded-full max-w-full mx-auto" style="max-width: 120px;" />
+							<img alt="..." src="https://images.unsplash.com/photo-1594381898411-846e7d193883?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+								class="shadow-lg rounded max-w-full mx-auto" style="max-width: 250px;" />
 							<div class="pt-6 text-center">
-								<h5 class="text-xl font-bold">Romina Hadid</h5>
+								<h5 class="text-xl font-bold">Ms Jones</h5>
 								<p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
-									Marketing Specialist
+									Gym Boss
 								</p>
-								<div class="mt-6">
-									<button
-										class="bg-red-600 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-										type="button">
-										<i class="fab fa-google"></i></button><button
-										class="bg-blue-600 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-										type="button">
-										<i class="fab fa-facebook-f"></i>
-									</button>
-								</div>
 							</div>
 						</div>
 					</div>
-					<div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4">
+					<!-- Card 3 -->
+					<div class="w-full md:w-4/12 lg:mb-0 mb-12 px-">
 						<div class="px-6">
-							<img alt="..." src="./assets/img/team-3-800x800.jpg"
-								class="shadow-lg rounded-full max-w-full mx-auto" style="max-width: 120px;" />
+							<img alt="..." src="https://images.unsplash.com/photo-1567013127542-490d757e51fc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
+								class="shadow-lg rounded max-w-full mx-auto" style="max-width: 250px;" />
 							<div class="pt-6 text-center">
-								<h5 class="text-xl font-bold">Alexa Smith</h5>
+								<h5 class="text-xl font-bold">Mr Smith</h5>
 								<p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
-									UI/UX Designer
+									Gym Boss
 								</p>
-								<div class="mt-6">
-									<button
-										class="bg-red-600 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-										type="button">
-										<i class="fab fa-google"></i></button><button
-										class="bg-blue-400 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-										type="button">
-										<i class="fab fa-twitter"></i></button><button
-										class="bg-gray-800 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-										type="button">
-										<i class="fab fa-instagram"></i>
-									</button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4">
-						<div class="px-6">
-							<img alt="..." src="./assets/img/team-4-470x470.png"
-								class="shadow-lg rounded-full max-w-full mx-auto" style="max-width: 120px;" />
-							<div class="pt-6 text-center">
-								<h5 class="text-xl font-bold">Jenna Kardi</h5>
-								<p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
-									Founder and CEO
-								</p>
-								<div class="mt-6">
-									<button
-										class="bg-pink-500 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-										type="button">
-										<i class="fab fa-dribbble"></i></button><button
-										class="bg-red-600 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-										type="button">
-										<i class="fab fa-google"></i></button><button
-										class="bg-blue-400 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-										type="button">
-										<i class="fab fa-twitter"></i></button><button
-										class="bg-gray-800 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-										type="button">
-										<i class="fab fa-instagram"></i>
-									</button>
-								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
+		<!-- End Trainers Section -->
+
 		<section class="pb-20 relative block bg-gray-900">
 			<div class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
 				style="height: 80px;">
