--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 			<div class="container mx-auto px-4 lg:pt-24 lg:pb-64">
 				<div class="flex flex-wrap text-center justify-center">
 					<div class="w-full lg:w-6/12 px-4">
-						<h2 class="text-4xl font-semibold text-white">Contact Us</h2>
+						<h2 class="text-4xl font-semibold text-white uppercase">Contact Us</h2>
 						<p class="text-lg leading-relaxed mt-4 mb-4">
 							Contact us to ask any questions, aquire a membership, talk to
                 			our trainers or anything else you need.
@@ -240,31 +240,34 @@
 				</div>
 			</div>
 		</section>
-		<section class="relative block py-24 lg:pt-0 bg-gray-900">
+		<!-- End Contact Header Section -->
+
+		<!-- Contact Form -->
+		<section class="relative block py-24 lg:pt-0 bg-black">
 			<div class="container mx-auto px-4">
 				<div class="flex flex-wrap justify-center lg:-mt-64 -mt-48">
 					<div class="w-full lg:w-6/12 px-4">
 						<div
 							class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-gray-300">
-							<div class="flex-auto p-5 lg:p-10">
+							<div class="flex-auto p-5 lg:p-10 bg-orange-500 text-white">
 								<h4 class="text-2xl font-semibold">Want to work with us?</h4>
-								<p class="leading-relaxed mt-1 mb-4 text-gray-600">
+								<p class="leading-relaxed mt-1 mb-4">
 									Complete this form and we will get back to you in 24 hours.
 								</p>
 								<div class="relative w-full mb-3 mt-8">
-									<label class="block uppercase text-gray-700 text-xs font-bold mb-2"
+									<label class="block uppercase text-xs font-bold mb-2"
 										for="full-name">Full Name</label><input type="text"
-										class="border-0 px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full"
+										class="border-0 px-3 py-3 placeholder-gray-400 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full"
 										placeholder="Full Name" style="transition: all 0.15s ease 0s;" />
 								</div>
 								<div class="relative w-full mb-3">
-									<label class="block uppercase text-gray-700 text-xs font-bold mb-2"
+									<label class="block uppercase text-xs font-bold mb-2"
 										for="email">Email</label><input type="email"
 										class="border-0 px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full"
 										placeholder="Email" style="transition: all 0.15s ease 0s;" />
 								</div>
 								<div class="relative w-full mb-3">
-									<label class="block uppercase text-gray-700 text-xs font-bold mb-2"
+									<label class="block uppercase text-xs font-bold mb-2"
 										for="message">Message</label><textarea rows="4" cols="80"
 										class="border-0 px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full"
 										placeholder="Type a message..."></textarea>
@@ -282,9 +285,12 @@
 				</div>
 			</div>
 		</section>
+		<!-- End Contact Form -->
+
 	</main>
 	<!-- End Main -->
 
+	<!-- Footer -->
 	<footer class="relative bg-gray-300 pt-8 pb-6">
 		<div class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
 			style="height: 80px;">
@@ -378,6 +384,7 @@
 			</div>
 		</div>
 	</footer>
+	<!-- End Footer -->
 </body>
 <script>
 	function toggleNavbar(collapseID) {
