--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	<meta name="theme-color" content="#000000" />
 	<link rel="shortcut icon" href="./assets/img/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+	<link rel="stylesheet" 
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+	<link rel="stylesheet" 
+		href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet"
 		href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css" />
 	<title>The Power Room</title>
@@ -69,7 +72,7 @@
 			<div class="container relative mx-auto">
 				<div class="items-center flex flex-wrap">
 					<div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
-						<div class="pr-12">
+						<div>
 							<h1 class="text-white font-semibold text-5xl">
 								Feel The <span class="text-orange-500">Power</span>
 							</h1>
@@ -228,7 +231,7 @@
 					<polygon points="2560 0 2560 100 0 100"></polygon>
 				</svg>
 			</div>
-			<div class="container mx-auto px-4 lg:pt-24 lg:pb-64">
+			<div class="container mx-auto px-4 lg:pt-24 lg:pb-64 pb-20 pt-20">
 				<div class="flex flex-wrap text-center justify-center">
 					<div class="w-full lg:w-6/12 px-4">
 						<h2 class="text-4xl font-semibold text-white uppercase">Contact Us</h2>
@@ -339,5 +342,12 @@
 		document.getElementById(collapseID).classList.toggle("block");
 	}
 </script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+	AOS.init({
+		delay: 200,
+		duration: 1200,
+		once: false
+	})
+</script>
 </html>
