Add AOS fade class to hero,team and contact form

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				style='background-image: url("https://images.unsplash.com/photo-1526506118085-60ce8714f8c5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2134&q=80");'>
 				<span id="blackOverlay" class="w-full h-full absolute opacity-75 bg-black"></span>
 			</div>
-			<div class="container relative mx-auto">
+			<div class="container relative mx-auto" data-aos="fade-in">
 				<div class="items-center flex flex-wrap">
 					<div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
 						<div>
@@ -100,11 +100,11 @@
 		<section id="about" class="relative py-20 bg-black text-white">
 			<div class="container mx-auto px-4">
 				<div class="items-center flex flex-wrap">
-					<div class="w-full md:w-4/12 ml-auto mr-auto px-4">
+					<div class="w-full md:w-4/12 ml-auto mr-auto px-4" data-aos="fade-right">
 						<img alt="..." class="max-w-full rounded-lg shadow-lg"
 							src="https://images.unsplash.com/photo-1550345332-09e3ac987658?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"/>
 					</div>
-					<div class="w-full md:w-5/12 ml-auto mr-auto px-4">
+					<div class="w-full md:w-5/12 ml-auto mr-auto px-4" data-aos="fade-left">
 						<div class="md:pr-12">
 							<small class="text-orange-500">About our gym</small>
 							<h3 class="text-4xl uppercase font-bold">Safe Body Building</h3>
@@ -179,7 +179,7 @@
 				<!-- Trainer Card Wrapper -->
 				<div class="flex flex-wrap">
 					<!-- Card 1 -->
-					<div class="w-full md:w-4/12 lg:mb-0 mb-12 px-4">
+					<div class="w-full md:w-4/12 lg:mb-0 mb-12 px-4" data-aos="flip-right">
 						<div class="px-6">
 							<img alt="..." src="https://images.unsplash.com/photo-1597347343908-2937e7dcc560?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
 								class="shadow-lg rounded max-w-full mx-auto" style="max-width: 250px;" />
@@ -192,7 +192,7 @@
 						</div>
 					</div>
 					<!-- Card 2 -->
-					<div class="w-full md:w-4/12 lg:mb-0 mb-12 px-">
+					<div class="w-full md:w-4/12 lg:mb-0 mb-12 px-" data-aos="flip-right">
 						<div class="px-6">
 							<img alt="..." src="https://images.unsplash.com/photo-1594381898411-846e7d193883?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
 								class="shadow-lg rounded max-w-full mx-auto" style="max-width: 250px;" />
@@ -205,7 +205,7 @@
 						</div>
 					</div>
 					<!-- Card 3 -->
-					<div class="w-full md:w-4/12 lg:mb-0 mb-12 px-">
+					<div class="w-full md:w-4/12 lg:mb-0 mb-12 px-" data-aos="flip-right">
 						<div class="px-6">
 							<img alt="..." src="https://images.unsplash.com/photo-1567013127542-490d757e51fc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
 								class="shadow-lg rounded max-w-full mx-auto" style="max-width: 250px;" />
@@ -251,7 +251,7 @@
 				<div class="flex flex-wrap justify-center lg:-mt-64 -mt-48">
 					<div class="w-full lg:w-6/12 px-4">
 						<div
-							class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-gray-300">
+							class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-gray-300" data-aos="fade-up-right">
 							<div class="flex-auto p-5 lg:p-10 bg-orange-500 text-white">
 								<h4 class="text-2xl font-semibold">Want to work with us?</h4>
 								<p class="leading-relaxed mt-1 mb-4">
