Refactor HTML and update README.md

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8" />
@@ -259,7 +259,7 @@
 								</p>
 								<div class="relative w-full mb-3 mt-8">
 									<label class="block uppercase text-xs font-bold mb-2"
-										for="full-name">Full Name</label><input type="text"
+										for="full-name">Full Name</label><input id="full-name" type="text"
 										class="border-0 px-3 py-3 placeholder-gray-400 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full"
 										placeholder="Full Name" style="transition: all 0.15s ease 0s;" />
 								</div>
@@ -320,7 +320,6 @@
 							class="bg-white text-pink-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
 							type="button">
 							<i class="flex fab fa-linkedin text-orange-500"></i></button>
-						</button>
 					</div>
 				</div>
 			</div>
