--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
 								</div>
 								<div class="relative w-full mb-3">
 									<label class="block uppercase text-xs font-bold mb-2"
-										for="email">Email</label><input type="email"
+										for="email">Email</label><input id="email" type="email"
 										class="border-0 px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full"
 										placeholder="Email" style="transition: all 0.15s ease 0s;" />
 								</div>
 								<div class="relative w-full mb-3">
 									<label class="block uppercase text-xs font-bold mb-2"
-										for="message">Message</label><textarea rows="4" cols="80"
+										for="message">Message</label><textarea id="message" rows="4" cols="80"
 										class="border-0 px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full"
 										placeholder="Type a message..."></textarea>
 								</div>
@@ -335,11 +335,7 @@
 	</footer>
 	<!-- End Footer -->
 </body>
-<script>
-	function toggleNavbar(collapseID) {
-		document.getElementById(collapseID).classList.toggle("hidden");
-		document.getElementById(collapseID).classList.toggle("block");
-	}
+
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
@@ -347,6 +343,10 @@
 		delay: 200,
 		duration: 1200,
 		once: false
-	})
+	}),
+	function toggleNavbar(collapseID) {
+		document.getElementById(collapseID).classList.toggle("hidden");
+		document.getElementById(collapseID).classList.toggle("block");
+	}
 </script>
 </html>
