--- a/index.html
+++ b/index.html
@@ -334,19 +334,22 @@
 		</div>
 	</footer>
 	<!-- End Footer -->
+
+	<!-- Scripts -->
+	<script>
+		function toggleNavbar(collapseID) {
+			document.getElementById(collapseID).classList.toggle("hidden");
+			document.getElementById(collapseID).classList.toggle("block");
+		}
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script>
+		AOS.init({
+			delay: 200,
+			duration: 1200,
+			once: false
+		})
+	</script>
 </body>
 
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>
-	AOS.init({
-		delay: 200,
-		duration: 1200,
-		once: false
-	}),
-	function toggleNavbar(collapseID) {
-		document.getElementById(collapseID).classList.toggle("hidden");
-		document.getElementById(collapseID).classList.toggle("block");
-	}
-</script>
 </html>
